# fastapi_zero

./: .coverage  .gitignore  pyproject.toml  requirements.txt
src/fastapi_zero/: app.py
tests/: conftest.py  test_app.py
