[project]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Grupo Quality Ambiental",email = "ti@grupoqualityambiental.com.br"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.12.10,<0.13.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_zero", from = "src"}]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.10"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/fastapi_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fastapi_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
